feat: 深度优化 - 移除CORS/RateLimit、提升安全性、引入测试容器和依赖注入
- 移除 CORS 和 Rate Limiting 中间件（由网关处理）
- 提升 bcrypt cost 到 13
- 数据库连接池参数移到配置文件
- 添加输入验证中间件防止 SQL 注入和 XSS
- 恢复 JWT 生成逻辑（保留生成，移除验证）
- 引入 testcontainers-go 进行集成测试
- 引入 uber-go/fx 依赖注入框架
- 创建 Fx 迁移指南文档

--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -24,8 +24,12 @@ database:
   port: 5432                        # Override with DATABASE_PORT  
   user: "postgres"                  # Override with DATABASE_USER
   password: ""                      # Override with DATABASE_PASSWORD (recommended)
-  name: "go_rest_api_starter"                      # Override with DATABASE_NAME
+  name: "go_rest_api_starter"       # Override with DATABASE_NAME
   sslmode: "disable"                # Override with DATABASE_SSLMODE
+  max_open_conns: 25                # Override with DATABASE_MAX_OPEN_CONNS
+  max_idle_conns: 5                 # Override with DATABASE_MAX_IDLE_CONNS
+  conn_max_lifetime: 3600           # Override with DATABASE_CONN_MAX_LIFETIME (seconds)
+  conn_max_idle_time: 600           # Override with DATABASE_CONN_MAX_IDLE_TIME (seconds)
 
 jwt:
   access_token_ttl: "15m"           # Override with JWT_ACCESS_TOKEN_TTL
